Quick revision to README.md